move sessionToken to query params
